pkl: fix recognition of token 0[bB] in the lexer
2023-01-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l (pkl_lex_get_base): Handle 0[Bb] literals
	properly.
	* testsuite/poke.pkl/integers-11.pk: New test.
	* testsuite/poke.pkl/integers-12.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1659,6 +1659,8 @@ EXTRA_DIST = \
   poke.pkl/integers-8.pk \
   poke.pkl/integers-9.pk \
   poke.pkl/integers-10.pk \
+  poke.pkl/integers-11.pk \
+  poke.pkl/integers-12.pk \
   poke.pkl/integers-diag-1.pk \
   poke.pkl/integers-diag-2.pk \
   poke.pkl/integers-diag-3.pk \
