pkl: support for struct field pretty-printers
It is often useful to pretty-print just some particular field of a
struct.  This patch adds support for field pretty-printers, which look
like:

  type Switch =
    struct
    {
      int<32> state;

      method _print_state = void:
      {
        printf ("#<%s>", state ? "on" : "off");
      }
    };

And then:

  (poke) .set pretty-print yes
  (poke) Switch { state = 1 }
  Switch {
    state=#<on>
  }

2023-01-27  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_decl): Check field
	pretty-printers.
	* libpoke/pkl-rt.pk (_pkl_print_format_any): Use field
	pretty-printers whenever available.
	* testsuite/poke.pkl/struct-field-pretty-print-diag-1.pk: New
	test.
	* testsuite/poke.pkl/struct-field-pretty-print-diag-2.pk:
	Likewise.
	* testsuite/poke.pkl/struct-field-pretty-print-1.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* doc/poke.texi (Struct Pretty Printers): New section.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2395,6 +2395,9 @@ EXTRA_DIST = \
   poke.pkl/strings-index-diag-1.pk \
   poke.pkl/strings-index-diag-2.pk \
   poke.pkl/strings-index-diag-3.pk \
+  poke.pkl/struct-field-pretty-print-1.pk \
+  poke.pkl/struct-field-pretty-print-diag-1.pk \
+  poke.pkl/struct-field-pretty-print-diag-2.pk \
   poke.pkl/struct-method-1.pk \
   poke.pkl/struct-method-2.pk \
   poke.pkl/struct-method-3.pk \
