pkl: do not validate _print* functions as if they were methods
Functions called _print* are not pretty-printing methods.  This patch
fixes a bug in the compiler, that was (incorrectly) validating them as
such.

I have installed this in master, and a suitable modified version in
poke/maint-3.

2023-01-27  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_decl): Do not validate
	signature of _print* functions, as opposed to methods.
	* testsuite/poke.pkl/struct-types-defun-4.pk: New test.
	* testsuite/poke.pkl/struct-field-pretty-print-diag-1.pk: Fix
	test.
	* testsuite/poke.pkl/struct-field-pretty-print-diag-2.pk: Likewise.
	* testsuite/poke.pkl/struct-pretty-print-diag-1.pk: Likewise.
	* testsuite/poke.pkl/struct-pretty-print-diag-2.pk: Likewise.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2444,6 +2444,7 @@ EXTRA_DIST = \
   poke.pkl/struct-types-defun-1.pk \
   poke.pkl/struct-types-defun-2.pk \
   poke.pkl/struct-types-defun-3.pk \
+  poke.pkl/struct-types-defun-4.pk \
   poke.pkl/struct-types-defun-diag-1.pk \
   poke.pkl/struct-types-defun-diag-2.pk \
   poke.pkl/struct-types-diag-2.pk \
