Install poke.m4 and add build configuration to libpoke runtime
This commit adds a new variable pk_version to the libpoke runtime,
which contains the version string of libpoke.

It also adds a poke.m4 file with two macros:

  PK_PROG_POKE checks for a version of poke with minimal version
  check.

  PK_CHECK_PICKLE checks whether a given poke can load the specified
  pickle.

Both variables are intended to be used by other programs that install
pickles.

2023-01-27  Jose E. Marchesi  <jemarch@gnu.org>

	* autoconf/poke.m4: New file.
	* autoconf/Makefile.am: Likewise.
	* libpoke/pkl-config.pk.in: Likewise.
	* libpoke/pkl.c (pkl_new): Load pkl-config.pk as part of the
	compiler bootstrapping.
	* Makefile.am (SUBDIRS): Add autoconf.
	* configure.ac (AC_CONFIG_FILES): Add autoconf/Makefile.
	Add pkl-config.pk.
	* libpoke/Makefile.am (dist_pkgdata_DATA): Add pkl-config.pk.

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,8 +16,8 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 ACLOCAL_AMFLAGS = -I m4 -I m4/libpoke
-SUBDIRS = jitter gl maps pickles gl-libpoke libpoke poke poked utils \
-          doc man testsuite etc po
+SUBDIRS = jitter gl autoconf maps pickles gl-libpoke libpoke poke \
+          poked utils doc man testsuite etc po
 
 EXTRA_DIST = INSTALL.generic DEPENDENCIES $(top_srcdir)/.version
 BUILT_SOURCES = $(top_srcdir)/.version
