--- a/run.in
+++ b/run.in
@@ -31,6 +31,7 @@ b=`cd @abs_builddir@ && pwd`
 # setup to run uninstalled poke
 PATH=$b/poke:$PATH
 POKEDATADIR=$s/libpoke
+POKECONFIGDIR=$b/libpoke
 POKEINFODIR=$s/doc
 POKEAPPDIR=$s/poke
 POKEDAPPDIR=$s/poked
