pkl-config.pk: make pk_version immutable
2023-01-28  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-config.pk.in: Make pk_version immutable.

--- a/libpoke/pkl-config.pk.in
+++ b/libpoke/pkl-config.pk.in
@@ -19,4 +19,4 @@
 /* This file defines variables whose values are substituted by
    the poke build system.  */
 
-var pk_version = "@PACKAGE_VERSION@";
+immutable var pk_version = "@PACKAGE_VERSION@";
