pkl: support equality and inequality of `any' values
This commit adds support for comparing values of type `any' with the
== and != operators.

Type dispatching is performed at run-time dynamically.  All different
combinations are supported.

This is useful by itself, and also a requirement to support `any'
fields in structs.

2023-02-03  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt.pk (_pkl_64x64_128): New function.
	(_pkl_any_integral_p): Likewise.
	(_pkl_eq_integral): Likewise.
	(_pkl_eq_offset): Likewise.
	(_pkl_eq_array): Likewise.
	(_pkl_eq_struct): Likewise.
	(_pkl_eq_any): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_ps_op_rela): Support EQ and NE for
	`any' values.
	(pkl_gen_pr_cast): Do nothing for casts to `any'.
	* libpoke/pkl-typify.c (pkl_typify1_ps_op_rela): Likewise.
	* libpoke/pkl-promo.c (pkl_promo_ps_op_rela): Likewise.
	(promote_to_any): New function.
	* testsuite/poke.pkl/eq-any-diag-1.pk: Remove test.
	* testsuite/poke.pkl/neq-any-diag-1.pk: Likewise.
	* testsuite/poke.pkl/ge-any-diag-1.pk: New test.
	* testsuite/poke.pkl/le-any-diag-1.pk: Likewise.
	* testsuite/poke.pkl/lt-any-diag-1.pk: Likewise.
	* testsuite/poke.pkl/gt-any-diag-1.pk: Likewise.
	* testsuite/poke.pkl/eq-any-integral-1.pk: Likewise.
	* testsuite/poke.pkl/eq-any-integral-2.pk: Likewise.
	* testsuite/poke.pkl/eq-any-integral-3.pk: Likewise.
	* testsuite/poke.pkl/eq-any-integral-4.pk: Likewise.
	* testsuite/poke.pkl/eq-any-offset-1.pk: Likewise.
	* testsuite/poke.pkl/eq-any-offset-2.pk: Likewise.
	* testsuite/poke.pkl/eq-any-offset-3.pk: Likewise.
	* testsuite/poke.pkl/eq-any-offset-4.pk: Likewise.
	* testsuite/poke.pkl/eq-any-offset-5.pk: Likewise.
	* testsuite/poke.pkl/eq-any-offset-6.pk: Likewise.
	* testsuite/poke.pkl/eq-any-offset-7.pk: Likewise.
	* testsuite/poke.pkl/neq-any-offset-1.pk: Likewise.
	* testsuite/poke.pkl/neq-any-offset-2.pk: Likewise.
	* testsuite/poke.pkl/neq-any-offset-3.pk: Likewise.
	* testsuite/poke.pkl/neq-any-offset-4.pk: Likewise.
	* testsuite/po

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1258,7 +1258,24 @@ EXTRA_DIST = \
   poke.pkl/div-offsets-diag-3.pk \
   poke.pkl/diva-int-1.pk \
   poke.pkl/diva-offset-diag-1.pk \
-  poke.pkl/eq-any-diag-1.pk \
+  poke.pkl/eq-any-array-1.pk \
+  poke.pkl/eq-any-array-2.pk \
+  poke.pkl/eq-any-integral-1.pk \
+  poke.pkl/eq-any-integral-2.pk \
+  poke.pkl/eq-any-integral-3.pk \
+  poke.pkl/eq-any-integral-4.pk \
+  poke.pkl/eq-any-offset-1.pk \
+  poke.pkl/eq-any-offset-2.pk \
+  poke.pkl/eq-any-offset-3.pk \
+  poke.pkl/eq-any-offset-4.pk \
+  poke.pkl/eq-any-offset-5.pk \
+  poke.pkl/eq-any-offset-6.pk \
+  poke.pkl/eq-any-offset-7.pk \
+  poke.pkl/eq-any-string-1.pk \
+  poke.pkl/eq-any-struct-1.pk \
+  poke.pkl/eq-any-struct-2.pk \
+  poke.pkl/eq-any-struct-3.pk \
+  poke.pkl/eq-any-struct-4.pk \
   poke.pkl/eq-arrays-1.pk \
   poke.pkl/eq-arrays-2.pk \
   poke.pkl/eq-arrays-3.pk \
@@ -1507,6 +1524,7 @@ EXTRA_DIST = \
   poke.pkl/funcall-vararg-6.pk \
   poke.pkl/funcall-vararg-diag-1.pk \
   poke.pkl/funcall-vararg-diag-2.pk \
+  poke.pkl/ge-any-diag-1.pk \
   poke.pkl/ge-arrays-diag-1.pk \
   poke.pkl/ge-functions-diag-1.pk \
   poke.pkl/ge-integers-1.pk \
@@ -1527,6 +1545,7 @@ EXTRA_DIST = \
   poke.pkl/getenv-1.pk \
   poke.pkl/getenv-2.pk \
   poke.pkl/gettime-1.pk \
+  poke.pkl/gt-any-diag-1.pk \
   poke.pkl/gt-arrays-diag-1.pk \
   poke.pkl/gt-functions-diag-1.pk \
   poke.pkl/gt-functions-diag-2.pk \
@@ -1720,6 +1739,7 @@ EXTRA_DIST = \
   poke.pkl/lambda-4.pk \
   poke.pkl/lambda-5.pk \
   poke.pkl/lambda-diag-1.pk \
+  poke.pkl/le-any-diag-1.pk \
   poke.pkl/le-arrays-diag-1.pk \
   poke.pkl/le-functions-diag-1.pk \
   poke.pkl/le-integers-1.pk \
@@ -1746,6 +1766,7 @@ EXTRA_DIST = \
   poke.pkl/loop-2.pk \
   poke.pkl/loop-3.pk \
   poke.pkl/loop-4.pk \
+  poke.pkl/lt-any-diag-1.pk \
   poke.pkl/lt-arrays-diag-1.pk \
   poke.pkl/lt-functions-diag-1.pk \
   poke.pkl/lt-integers-1.pk \
@@ -1846,7 +1867,18 @@ EXTRA_DIST = \
   poke.pkl/neg-integers-2.pk \
   poke.pkl/neg-int-struct-1.pk \
   poke.pkl/neg-offsets-1.pk \
-  poke.pkl/neq-any-diag-1.pk \
+  poke.pkl/neq-any-array-1.pk \
+  poke.pkl/neq-any-array-2.pk \
+  poke.pkl/neq-any-offset-1.pk \
+  poke.pkl/neq-any-offset-2.pk \
+  poke.pkl/neq-any-offset-3.pk \
+  poke.pkl/neq-any-offset-4.pk \
+  poke.pkl/neq-any-offset-5.pk \
+  poke.pkl/neq-any-offset-6.pk \
+  poke.pkl/neq-any-offset-7.pk \
+  poke.pkl/neq-any-string-1.pk \
+  poke.pkl/neq-any-struct-1.pk \
+  poke.pkl/neq-any-struct-2.pk \
   poke.pkl/neq-integers-1.pk \
   poke.pkl/neq-integers-2.pk \
   poke.pkl/neq-offsets-1.pk \
