testsuite: new testsuite pvm.exp with a few tests
2023-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pvm/pvm.exp: New file.
	* testsuite/poke.pvm/vm-insns.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2706,6 +2706,7 @@ EXTRA_DIST = \
   poke.pktest/pktest-10.pk \
   poke.pktest/pktest-11.pk \
   poke.pktest/pktest-12.pk \
+  poke.pvm/pvm-insns-test.pk \
   poke.repl/repl.exp \
   poke.std/std.exp \
   poke.std/std-test.pk \
