pkl,pvm: add a ref_type attribute to offset types
This patch adds a new attribute to offset types: a referred type.
This means that values of this type refer to some other value in an IO
space.  Sort of a pointer.

The syntax is the following:

   offset<uint<64>,B,Foo> pointer_to_foo;

This patch adds the compiler support to recognize such types, and also
the corresponding PVM support code that expands the PVM offset types
at runtime.  The printers (both C and Poke) are also updated
accordingly.

2023-02-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (struct pkl_ast_type): New field ref_type in
	offset types.
	(PKL_AST_TYPE_O_REF_TYPE): Define.
	* libpoke/pkl-ast.c (pkl_ast_make_offset_type): Get a ref_type
	argument.
	(pkl_ast_node_free_1): Free ref_type.
	(pkl_ast_print_1): Print ref_type.
	(pkl_type_append_to): Include ref_type in printed representation.
	* libpoke/pkl-tab.y (ref_type): New rule.
	* libpoke/pkl-typify.c: Pass ref_type argument to calls to
	pkl_ast_make_offset_type.
	* libpoke/pkl-promo.c (promote_offset): Likewise.
	* libpoke/pkl-trans.c: Likewise.
	* libpoke/pkl-pass.c (pkl_do_pass_1): Traverse ref_type in offset
	type nodes.
	* libpoke/pkl-lex.l: Likewise.
	* libpoke/pkl-gen.c (pkl_gen_pr_type_offset): Use ref_type.
	* libpoke/pkl-rt.pk (_pkl_print_format_any): Print ref_type in
	offset types.
	* libpoke/pvm-val.h (PVM_VAL_TYP_O_REF_TYPE): Define.
	* libpoke/pvm-val.c (pvm_make_offset_type): Get an argument
	ref_type.
	* libpoke/pvm.jitter (mktyor): New instruction.
	(tyogetrt): New instruction.
	* libpoke/pkl-insn.def: New instruction PKL_INSN_TYOGETRT.
	* libpoke/pk-val.c (pk_make_offset_type): Likewise.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -706,6 +706,7 @@ EXTRA_DIST = \
   poke.pkl/add-offsets-9.pk \
   poke.pkl/add-offsets-diag-1.pk \
   poke.pkl/add-offsets-10.pk \
+  poke.pkl/add-offsets-11.pk \
   poke.pkl/add-strings-1.pk \
   poke.pkl/add-strings-diag-1.pk \
   poke.pkl/adda-int-1.pk \
@@ -1031,6 +1032,7 @@ EXTRA_DIST = \
   poke.pkl/bnot-integers-4.pk \
   poke.pkl/bnot-int-struct-1.pk \
   poke.pkl/bnot-offsets-1.pk \
+  poke.pkl/bnot-offsets-2.pk \
   poke.pkl/break-diag-1.pk \
   poke.pkl/break-for-1.pk \
   poke.pkl/break-while-1.pk \
@@ -1257,6 +1259,7 @@ EXTRA_DIST = \
   poke.pkl/div-offsets-2.pk \
   poke.pkl/div-offsets-3.pk \
   poke.pkl/div-offsets-4.pk \
+  poke.pkl/div-offsets-5.pk \
   poke.pkl/div-offsets-diag-1.pk \
   poke.pkl/div-offsets-diag-2.pk \
   poke.pkl/div-offsets-diag-3.pk \
@@ -1813,6 +1816,7 @@ EXTRA_DIST = \
   poke.pkl/mod-offsets-3.pk \
   poke.pkl/mod-offsets-4.pk \
   poke.pkl/mod-offsets-5.pk \
+  poke.pkl/mod-offsets-6.pk \
   poke.pkl/mod-offsets-diag-1.pk \
   poke.pkl/mod-offsets-diag-2.pk \
   poke.pkl/moda-int-1.pk \
@@ -1845,6 +1849,7 @@ EXTRA_DIST = \
   poke.pkl/mul-offsets-9.pk \
   poke.pkl/mul-offsets-10.pk \
   poke.pkl/mul-offsets-11.pk \
+  poke.pkl/mul-offsets-12.pk \
   poke.pkl/mul-strings-1.pk \
   poke.pkl/mul-strings-2.pk \
   poke.pkl/mul-strings-3.pk \
@@ -1913,6 +1918,7 @@ EXTRA_DIST = \
   poke.pkl/offset-arg-2.pk \
   poke.pkl/offset-diag-1.pk \
   poke.pkl/offset-type-1.pk \
+  poke.pkl/offset-type-2.pk \
   poke.pkl/offset-type-diag-1.pk \
   poke.pkl/offset-type-diag-2.pk \
   poke.pkl/offset-type-diag-3.pk \
@@ -2038,6 +2044,7 @@ EXTRA_DIST = \
   poke.pkl/print-any-1.pk \
   poke.pkl/print-any-2.pk \
   poke.pkl/print-any-3.pk \
+  poke.pkl/print-any-4.pk \
   poke.pkl/print-diag-1.pk \
   poke.pkl/preincr-field-1.pk \
   poke.pkl/preincr-diag-2.pk \
@@ -2535,6 +2542,7 @@ EXTRA_DIST = \
   poke.pkl/sub-offsets-6.pk \
   poke.pkl/sub-offsets-7.pk \
   poke.pkl/sub-offsets-8.pk \
+  poke.pkl/sub-offsets-9.pk \
   poke.pkl/suba-int-1.pk \
   poke.pkl/suba-offset-1.pk \
   poke.pkl/term-class-1.pk \
