pkl: rewrite macro ais and fix macro eqa
2023-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-asm.pks (ais): Rewrite.
	(eqa): Do not revert argument arrays.
	* testsuite/poke.pkl/in-10.pk: New test.
	* testsuite/poke.pkl/in-11.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1594,6 +1594,8 @@ EXTRA_DIST = \
   poke.pkl/in-7.pk \
   poke.pkl/in-8.pk \
   poke.pkl/in-9.pk \
+  poke.pkl/in-10.pk \
+  poke.pkl/in-11.pk \
   poke.pkl/in-diag-1.pk \
   poke.pkl/in-diag-2.pk \
   poke.pkl/in-diag-3.pk \
