pkl: fix array-to-array casting to have the right bounder
Bounders in PVM arrays are closures that return one of these PVM
values: `PVM_NULL', an integer, an offset.
This commit fixes the cast operation to an unbounded array type.

2023-02-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-asm.c (pkl_asm_insn_atoa): Do not use `PVM_NULL' as
	the bounder in the type of array.  Use a closure that returns
	`PVM_NULL'.
	* testsuite/poke.pkl/cast-array-8.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1046,6 +1046,7 @@ EXTRA_DIST = \
   poke.pkl/cast-array-5.pk \
   poke.pkl/cast-array-6.pk \
   poke.pkl/cast-array-7.pk \
+  poke.pkl/cast-array-8.pk \
   poke.pkl/cast-array-diag-1.pk \
   poke.pkl/cast-array-diag-2.pk \
   poke.pkl/cast-array-diag-3.pk \
