Allow accessing the installed files in a Cygwin-based mingw environment.
* bootstrap.conf (gnulib_modules, libpoke_modules): Add configmake.
* libpoke/Makefile.am (libpoke_la_CPPFLAGS): Don't define PKGDATADIR.
* libpoke/libpoke.c: Instead, include configmake.h.
* libpoke/pkl.c: Likewise.
* poke/Makefile.am (poke_CPPFLAGS): Don't define PKGDATADIR.
* poke/pk-map.c: Instead, include configmake.h.
* poke/pk-term.c: Likewise.
* poke/poke.c: Likewise.
* poked/Makefile.am (poked_CPPFLAGS): Remove useless -I options. Don't define
PKGDATADIR. Add -I options to find the common gl/ directories.
* poked/poked.c: Include configmake.h.
* testsuite/poke.libpoke/Makefile.am (COMMON_CPPFLAGS): Don't define PKGDATADIR.

--- a/poked/Makefile.am
+++ b/poked/Makefile.am
@@ -32,9 +32,8 @@ poked_SOURCES = poked.c \
 poked_SOURCES += ../common/pk-utils.c ../common/pk-utils.h
 
 poked_CPPFLAGS = -I$(top_srcdir)/common \
-                 -I$(top_builddir)/gl-poked -I$(top_srcdir)/gl-poked \
-                 -I$(top_srcdir)/libpoke -I$(top_builddir)/libpoke \
-                 -DPKGDATADIR=\"$(pkgdatadir)\"
+                 -I$(top_builddir)/gl -I$(top_srcdir)/gl \
+                 -I$(top_srcdir)/libpoke -I$(top_builddir)/libpoke
 poked_CFLAGS = -Wall
 poked_LDADD = $(top_builddir)/gl/libgnu.la \
               $(top_builddir)/libpoke/libpoke.la \
