--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -1,8 +1,6 @@
 # Bootstrap configuration.
 
-# Copyright (C) 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014,
-# 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022 Free Software Foundation,
-# Inc.
+# Copyright (C) 2006-2023 Free Software Foundation, Inc.
 
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -26,6 +24,7 @@ gnulib_modules="
   basename-lgpl
   bind
   byteswap
+  configmake
   findprog
   fstat
   gendocs
@@ -74,6 +73,7 @@ gnulib_modules="
 libpoke_modules="
   basename-lgpl
   byteswap
+  configmake
   errno
   fopen-gnu
   free-posix
