pkl: fix pkl_asm_insn_cmp to support any values
2023-02-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-asm.c (pkl_asm_insn_cmp): Support values of type
	any.
	* testsuite/poke.pkl/eq-any-array-3.pk: New test.
	* testsuite/poke.pkl/neq-array-3.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1263,6 +1263,7 @@ EXTRA_DIST = \
   poke.pkl/diva-offset-diag-1.pk \
   poke.pkl/eq-any-array-1.pk \
   poke.pkl/eq-any-array-2.pk \
+  poke.pkl/eq-any-array-3.pk \
   poke.pkl/eq-any-integral-1.pk \
   poke.pkl/eq-any-integral-2.pk \
   poke.pkl/eq-any-integral-3.pk \
@@ -1876,6 +1877,7 @@ EXTRA_DIST = \
   poke.pkl/neg-offsets-1.pk \
   poke.pkl/neq-any-array-1.pk \
   poke.pkl/neq-any-array-2.pk \
+  poke.pkl/neq-any-array-3.pk \
   poke.pkl/neq-any-offset-1.pk \
   poke.pkl/neq-any-offset-2.pk \
   poke.pkl/neq-any-offset-3.pk \
