pickles: add iscan pickles
2023-02-20  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/iscan.pk: New file.
	* pickles/iscan-str.pk: Likewise.
	* pickles/Makefile.am (dist_pickles_DATA): Add iscan.pk and
	iscan-str.pk.
	* testsuite/poke.pickles/iscan-test.pk: New testsuite.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -585,6 +585,7 @@ EXTRA_DIST = \
   poke.map/write-unions-3.pk \
   poke.map/write-structs-1.pk \
   poke.pickles/pickles.exp \
+  poke.pickles/iscan-test.pk \
   poke.pickles/argp-test.pk \
   poke.pickles/asn1-ber-test.pk \
   poke.pickles/bmp-test.pk \
