pkl: fix constant folding of offset multiplication with zero unit
2023-03-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-fold.c (OP_BINARY_OIO): Support units 0.
	* testsuite/poke.pkl/mul-offsets-11.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1843,6 +1843,7 @@ EXTRA_DIST = \
   poke.pkl/mul-offsets-8.pk \
   poke.pkl/mul-offsets-9.pk \
   poke.pkl/mul-offsets-10.pk \
+  poke.pkl/mul-offsets-11.pk \
   poke.pkl/mul-strings-1.pk \
   poke.pkl/mul-strings-2.pk \
   poke.pkl/mul-strings-3.pk \
