pkl: support for the 'ref attribute
2023-03-28  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-attrs.def: New attribute 'ref.
	* libpoke/pkl-typify.c (pkl_typify1_ps_attr): Handle 'ref.
	* libpoke/pkl-anal.c (pkl_anal1_ps_op_attr): Likewise.
	* libpoke/pkl-promo.c (pkl_promo_ps_op_attr): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_ps_op_attr): Likewise.
	* libpoke/pkl-gen-attrs.pks (attr_ref): New macro.
	* testsuite/poke.pkl/attr-ref-diag-1.pk: New test.
	* testsuite/poke.pkl/attr-ref-diag-2.pk: Likewise.
	* testsuite/poke.pkl/attr-ref-diag-3.pk: Likewise.
	* testsuite/poke.pkl/attr-ref-1.pk: Likewise.
	* testsuite/poke.pkl/attr-ref-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -968,6 +968,15 @@ EXTRA_DIST = \
   poke.pkl/attr-offset-diag-2.pk \
   poke.pkl/attr-offset-diag-3.pk \
   poke.pkl/attr-offset-diag-4.pk \
+  poke.pkl/attr-ref-1.pk \
+  poke.pkl/attr-ref-2.pk \
+  poke.pkl/attr-ref-3.pk \
+  poke.pkl/attr-ref-4.pk \
+  poke.pkl/attr-ref-5.pk \
+  poke.pkl/attr-ref-diag-1.pk \
+  poke.pkl/attr-ref-diag-2.pk \
+  poke.pkl/attr-ref-diag-3.pk \
+  poke.pkl/attr-ref-diag-4.pk \
   poke.pkl/attr-signed-1.pk \
   poke.pkl/attr-signed-2.pk \
   poke.pkl/attr-size-1.pk \
