libpoke: add pk_keyword_p service
2023-04-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: Prototype for pk_keyword_p.
	* libpoke/libpoke.c (pk_keyword_p): New function.
	* libpoke/Makefile.am: Generate $(srcdir)/pkl-keywords.def.
	* testsuite/poke.libpoke/api.c (test_pk_keyword_p): New test.
	* .gitignore: Add /libpoke/pkl-keywords.def.

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,7 @@ config.h.in
 /libpoke/pvm-vm.h
 /libpoke/pvm-vm1.c
 /libpoke/pvm-vm2.c
+/libpoke/pkl-keywords.def
 /poke/pk-map-lex.c
 /poke/pk-map-lex.h
 /poke/pk-map-tab.c
