ios: track sub IOS devices
In this commit, we keep track of number of sub-devices for each
IO space.  If the user close the super-IOS, it'll become a zombie
IOS: it's dead but the corresponding `struct ios' is not un-allocated
yet.  When user closes the sub-IOS, and if it's the last sub-IOS,
it'll de-allocate the corresponding `struct ios'.

2023-04-29  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/ios.h (ios_inc_sub_dev): New function to track sub
	IO spaces.
	(ios_dec_sub_dev): Likewise.
	(ios_zombie_p): New function.
	* libpoke/ios.c (struct ios): Add new fields `zombie_p` and
	`num_sub_devs'.
	(ios_inc_sub_dev): New function definition.
	(ios_dec_sub_dev): Likewise.
	(ios_zombie_p): Likewise.
	(ios_open): Initialize new fields.
	(ios_close): Instead of deallocating the IOS, it becomes a zombie,
	if there's at least one sub-device that using this IOS.
	* libpoke/ios-dev-sub.c (struct ios_dev_sub): Use `ios' instead of
	ios id.
	(ios_dev_sub_open): Update to track base IOS.
	(ios_dev_sub_close): Likewise.
	(ios_dev_sub_pread): Use base IOS directly instead of searching
	using id.
	(ios_dev_sub_pwrite): Likewise.
	* testsuite/poke.pkl/open-sub-19.pk: New test.
	* testusite/poke.pkl/open-sub-20.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1968,6 +1968,8 @@ EXTRA_DIST = \
   poke.pkl/open-sub-16.pk \
   poke.pkl/open-sub-17.pk \
   poke.pkl/open-sub-18.pk \
+  poke.pkl/open-sub-19.pk \
+  poke.pkl/open-sub-20.pk \
   poke.pkl/open-sub-2.pk \
   poke.pkl/open-sub-3.pk \
   poke.pkl/open-sub-4.pk \
