libpoke: PVM stack traces
2023-05-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-insn.def (PKL_INSN_RTRACE): New instruction.
	* libpoke/pvm.jitter (PVM_CALL): Push the caller's name in the
	returnstack.
	(return): Drop the caller's name from the returnstack.
	(rtrace): New instruction.
	* libpoke/pkl-rt.pk (rtrace): New function.
	* testsuite/poke.pkl/rtrace-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
	* etc/poke.rec (PVM stack traces): Remove as done.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2257,6 +2257,8 @@ EXTRA_DIST = \
   poke.pkl/return-diag-4.pk \
   poke.pkl/rla-int-1.pk \
   poke.pkl/rla-offset-1.pk \
+  poke.pkl/rtrace-1.pk \
+  poke.pkl/rtrace-2.pk \
   poke.pkl/scons-1.pk \
   poke.pkl/scons-2.pk \
   poke.pkl/scons-3.pk \
