pickles: add base64 pickle
2023-05-14  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/base64.pk: New file.
	* testsuite/poke.pickles/base64-test.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
	* doc/poke.texi (base64): New section.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -588,6 +588,7 @@ EXTRA_DIST = \
   poke.pickles/iscan-test.pk \
   poke.pickles/argp-test.pk \
   poke.pickles/asn1-ber-test.pk \
+  poke.pickles/base64-test.pk \
   poke.pickles/bmp-test.pk \
   poke.pickles/bpf-test.pk \
   poke.pickles/btf-ext-test.pk \
