pkl: fix fast path in array promotion
2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-promo.c (promote_array): Fix bounded array fast
	path.
	* testsuite/poke.pkl/promo-array-return-6.pk: New test.
	* testsuite/poke.pkl/add-arrays-4.pk: Fix test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2160,6 +2160,7 @@ EXTRA_DIST = \
   poke.pkl/promo-array-return-3.pk \
   poke.pkl/promo-array-return-4.pk \
   poke.pkl/promo-array-return-5.pk \
+  poke.pkl/promo-array-return-6.pk \
   poke.pkl/promo-array-return-diag-1.pk \
   poke.pkl/promo-array-return-diag-2.pk \
   poke.pkl/promo-array-scons-diag-1.pk \
