pkl: fix code generator to LMAP when assigning fields within methods
2023-05-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_ass_stmt): Perform a LMAP whenever
	necessary when assigning to struct fields within methods.
	* testsuite/poke.map/setter-1.pk: New test.
	* testsuite/poke.map/setter-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -562,6 +562,8 @@ EXTRA_DIST = \
   poke.map/nsmap-6.pk \
   poke.map/nsmap-7.pk \
   poke.map/remap-1.pk \
+  poke.map/setter-1.pk \
+  poke.map/setter-2.pk \
   poke.map/strict-attr-1.pk \
   poke.map/strict-attr-2.pk \
   poke.map/strict-attr-3.pk \
