pkl: check data integrity in implicit ssets in method bodies
2023-06-19  Jose E. Marchesi  <jemarch@gnu.org>
2023-06-19  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm-val.h (array): New field sct.constructor.
	(PVM_VAL_TYP_S_CONSTRUCTOR): Define.
	* libpoke/pvm-val.c (pvm_struct_type_constructor): New function.
	(pvm_make_struct_type): Get a new `constructor' argument.
	* libpoke/pkl-insn.def (PKL_INSN_TYSCTGETC): New instruction.
	(PKL_INSN_TYSCTSETC): Likewise.
	* libpoke/pk-val.c (pk_make_struct_type): Pass PVM_NULL for
	constructor.
	* libpoke/pvm-val.c (pvm_make_exception): Likewise.
	* libpoke/pvm.jitter (mktysct): Likewise.
	(tysctgetc): New instruction.
	(tysctsetc): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_ps_type_struct): Install constructor
	closure in the created PVM struct type.
	(pkl_gen_pr_cons): Converted from pkl_gen_ps_cons.
	(pkl_gen_pr_decl): Moving mapper generation after the generation of
	constructor.
	(pkl_gen_pr_ass_stmt): fix field assignements within methods.
	* libpoke/pkl-asm.pks (ssetc): Use run-time consructor closure if
	no struct_type AST node is provided.
	* testsuite/poke.map/maps-structs-methods-12.pk: New test.
	* testsuite/poke.map/maps-structs-methods-13.pk: Likewise.
	* testsuite/poke.map/maps-structs-methods-14.pk: Likewise.
	* testsuite/poke.pkl/struct-method-20.pk: Likewise.
	* testsuite/poke.pkl/struct-method-21.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -397,6 +397,9 @@ EXTRA_DIST = \
   poke.map/maps-structs-methods-9.pk \
   poke.map/maps-structs-methods-10.pk \
   poke.map/maps-structs-methods-11.pk \
+  poke.map/maps-structs-methods-12.pk \
+  poke.map/maps-structs-methods-13.pk \
+  poke.map/maps-structs-methods-14.pk \
   poke.map/maps-structs-pinned-1.pk \
   poke.map/maps-structs-pinned-2.pk \
   poke.map/maps-structs-pinned-3.pk \
@@ -2505,6 +2508,8 @@ EXTRA_DIST = \
   poke.pkl/struct-method-17.pk \
   poke.pkl/struct-method-18.pk \
   poke.pkl/struct-method-19.pk \
+  poke.pkl/struct-method-20.pk \
+  poke.pkl/struct-method-21.pk \
   poke.pkl/struct-method-diag-1.pk \
   poke.pkl/struct-method-diag-2.pk \
   poke.pkl/struct-method-diag-3.pk \
