pkl: fix constraint checking in ssetc and asetc
2023-06-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Re-raise an E_conv
	from ATOA as an E_constraint.
	* testsuite/poke.pkl/ass-19.pk: New test.
	* testsuite/poke.pkl/ass-20.pk: Likewise.
	* testsuite/poke.pkl/ass-21.pk: Likewise.
	* testsuite/poke.pkl/scons-43.pk: Update test.
	* libpoke/pkl-asm.pks (asetc): Raise E_constraint instead of
	E_conv if the array type boundaries are violated.
	* testsuite/poke.pkl/array-siz-diag-1.pk: Update test accordingly.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -884,6 +884,9 @@ EXTRA_DIST = \
   poke.pkl/ass-16.pk \
   poke.pkl/ass-17.pk \
   poke.pkl/ass-18.pk \
+  poke.pkl/ass-19.pk \
+  poke.pkl/ass-20.pk \
+  poke.pkl/ass-21.pk \
   poke.pkl/ass-diag-1.pk \
   poke.pkl/ass-diag-2.pk \
   poke.pkl/ass-diag-3.pk \
