ios: fix write of {,u}int<{16,24,32,40,48,56,64}>
2023-08-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* liboke/ios.c (ios_write_int_common): Fix the function when `bits'
	is 16, 24, 32, 40, 48, 56, 64.
	* testsuite/poke.map/maps-uint-write-75.pk: New test.
	* testsuite/poke.map/maps-uint-write-76.pk: Likewise.
	* testsuite/poke.map/maps-uint-write-77.pk: Likewise.
	* testsuite/poke.map/maps-uint-write-78.pk: Likewise.
	* testsuite/poke.map/maps-uint-write-79.pk: Likewise.
	* testsuite/poke.map/maps-uint-write-80.pk: Likewise.
	* testsuite/poke.map/maps-uint-write-81.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -532,6 +532,13 @@ EXTRA_DIST = \
   poke.map/maps-uint-write-72.pk \
   poke.map/maps-uint-write-73.pk \
   poke.map/maps-uint-write-74.pk \
+  poke.map/maps-uint-write-75.pk \
+  poke.map/maps-uint-write-76.pk \
+  poke.map/maps-uint-write-77.pk \
+  poke.map/maps-uint-write-78.pk \
+  poke.map/maps-uint-write-79.pk \
+  poke.map/maps-uint-write-80.pk \
+  poke.map/maps-uint-write-81.pk \
   poke.map/maps-unions-1.pk \
   poke.map/maps-unions-2.pk \
   poke.map/maps-unions-3.pk \
